--- a/MovieDB/templates/add_actor_director.html
+++ b/MovieDB/templates/add_actor_director.html
@@ -17,6 +17,7 @@
         <div id="tabpane_actor" class="tab-pane fade in active">
             <h3 class="text-info">Actor</h3>
             <form class="text-left" id="id_add_actor_form" name="add_movie_form" role="form" method="post">
+                {% csrf_token %}
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="form-group">
@@ -55,28 +56,29 @@
         </div>
         {# directors #}
         <div id="tabpane_director" class="tab-pane fade">
+            <h3 class="text-info">Director</h3>
             <form class="text-left" id="id_add_director_form" name="add_movie_form" role="form" method="post">
+                {% csrf_token %}
                 <div class="row">
                     <div class="col-lg-12">
-                        <h3 class="text-info">Director</h3>
-                            <div class="form-group">
-                                {{ director_form.first.errors }}
-                                {{ director_form.first }}
-                            </div>
-                            <div class="form-group">
-                                {{ director_form.last.errors }}
-                                {{ director_form.last }}
-                            </div>
-                            <div class="form-group">
-                                {{ director_form.dob.errors }}
-                                <label for="id_dob">Date of Birth</label>
-                                {{ director_form.dob }}
-                            </div>
-                            <div class="form-group">
-                                {{ director_form.dod.errors }}
-                                <label for="id_dob">Date of Death</label>
-                                {{ director_form.dod }}
-                            </div>
+                        <div class="form-group">
+                            {{ director_form.first.errors }}
+                            {{ director_form.first }}
+                        </div>
+                        <div class="form-group">
+                            {{ director_form.last.errors }}
+                            {{ director_form.last }}
+                        </div>
+                        <div class="form-group">
+                            {{ director_form.dob.errors }}
+                            <label for="id_dob">Date of Birth</label>
+                            {{ director_form.dob }}
+                        </div>
+                        <div class="form-group">
+                            {{ director_form.dod.errors }}
+                            <label for="id_dob">Date of Death</label>
+                            {{ director_form.dod }}
+                        </div>
                     </div>
                 </div>
                 <div class="row">
