--- a/MovieDB/templates/add_actor_director_view.html
+++ b/MovieDB/templates/add_actor_director_view.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 {% extends 'form_panel_md.html' %}
 
+{% block head_extra %}
+    {{ actor_form.media }}
+{#    {{ director_form.media }}#}
+{% endblock %}
+
 {% block form_heading %}
     <h2>Add a New Actor or Director</h2>
 {% endblock %}
@@ -30,17 +35,17 @@
                         </div>
                         <div class="form-group">
                             {{ actor_form.sex.errors }}
-                            <label for="id_dob">Sex</label>
+                            <label for="id_dob" class="text-capitalize">Sex</label>
                             {{ actor_form.sex }}
                         </div>
                         <div class="form-group">
                             {{ actor_form.dob.errors }}
-                            <label for="id_dob">Date of Birth</label>
+                            <label for="id_dob" class="text-capitalize">Date of Birth</label>
                             {{ actor_form.dob }}
                         </div>
                         <div class="form-group">
                             {{ actor_form.dod.errors }}
-                            <label for="id_dob">Date of Death</label>
+                            <label for="id_dod" class="text-capitalize">Date of Death</label>
                             {{ actor_form.dod }}
                         </div>
                     </div>
@@ -71,12 +76,12 @@
                         </div>
                         <div class="form-group">
                             {{ director_form.dob.errors }}
-                            <label for="id_dob">Date of Birth</label>
+                            <label for="id_dob" class="text-capitalize">Date of Birth</label>
                             {{ director_form.dob }}
                         </div>
                         <div class="form-group">
                             {{ director_form.dod.errors }}
-                            <label for="id_dob">Date of Death</label>
+                            <label for="id_dod" class="text-capitalize">Date of Death</label>
                             {{ director_form.dod }}
                         </div>
                     </div>
