--- a/MovieDB/templates/detail_base_view.html
+++ b/MovieDB/templates/detail_base_view.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base_view.html' %}
 {% block main_block %}
     <div class="container">
 
@@ -7,10 +7,6 @@
                 <h1>{{ page_header }}</h1>
             </div>
         </div>
-
-        {% if page.has_other_pages %}
-            {% include 'browse_paginator.html' %}
-        {% endif %}
 
         <div class="panel panel-dark text-left">
             <div class="panel-heading">
@@ -41,12 +37,9 @@
                 </h2>
             </div>
 
-            {% block paged_content %}{% endblock %}
-        </div>
+            {% block details_content %}{% endblock %}
 
-        {% if page.has_other_pages %}
-            {% include 'browse_paginator.html' %}
-        {% endif %}
+        </div>
 
     </div>
 {% endblock %}
