--- a/MovieDB/templates/views/base_view.html
+++ b/MovieDB/templates/views/base_view.html
@@ -25,7 +25,7 @@
 
 <body>
 
-{% include 'navbar_control.html' %}
+{% include 'controls/navbar_control.html' %}
 
 <div id="master_container">
 
@@ -33,7 +33,7 @@
         {% block main_block %}{% endblock %}
     </div>
 
-    {% include 'footer_control.html' %}
+    {% include 'controls/footer_control.html' %}
 </div>
 </body>
 
