--- a/MovieDB/templates/views/browse_movie_view.html
+++ b/MovieDB/templates/views/browse_movie_view.html
@@ -1,4 +1,4 @@
-{% extends 'browse_base_view.html' %}
+{% extends 'views/browse_base_view.html' %}
 {% load staticfiles %}
 
 {% block panel_heading %}
