--- a/MovieDB/templates/views/panels/panel_sm.html
+++ b/MovieDB/templates/views/panels/panel_sm.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-{% extends 'base_view.html' %}
+{% extends 'views/base_view.html' %}
 
 {% block main_block %}
     <div class="container">
