--- a/MovieDB/templates/views/browse_actor_view.html
+++ b/MovieDB/templates/views/browse_actor_view.html
@@ -1,27 +1,29 @@
-{% extends 'browse_base_view.html' %}
+{% extends 'views/browse_base_view.html' %}
 {% load staticfiles %}
 
 {% block panel_heading %}
-    <span class="glyphicon glyphicon-bullhorn"></span>
+    <span class="glyphicon glyphicon-user"></span>
     {{ results_header }}
 {% endblock %}
 
 {% block paged_content %}
     <div class="list-group">
-        {% for director in page %}
-            <a class="list-group-item" href={% url 'DirectorDetail' director.id %}>
+        {% for actor in page %}
+            <a class="list-group-item" href={% url 'ActorDetail' actor.id %}>
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="media-left">
                             <img class="media-object img-circle" height="128" src="{% static 'img/default_person.png' %}">
                         </div>
                         <div class="media-body">
-                            <h3 class="media-heading text-primary text-capitalize">{{ director.get_full_name }}</h3>
-                            <strong>DOB:</strong> {{ director.dob }}
-                            {% if director.dod %}
+                            <h3 class="media-heading text-primary text-capitalize">{{ actor.get_full_name }}</h3>
+                            <strong>DOB: </strong> {{ actor.dob }}
+                            {% if actor.dod %}
                                 </br>
-                                <strong>DOD: </strong> {{ director.dod }}
+                                <strong>DOD: </strong> {{ actor.dod }}
                             {% endif %}
+                            </br>
+                            <strong>Sex: </strong> {{ actor.sex }}
                         </div>
                     </div>
                 </div>
