--- a/MovieDB/templates/views/detail_movie_view.html
+++ b/MovieDB/templates/views/detail_movie_view.html
@@ -1,4 +1,4 @@
-{% extends 'detail_base_view.html' %}
+{% extends 'views/detail_base_view.html' %}
 {% load staticfiles %}
 
 {% block panel_heading %}
