--- a/MovieDB/templates/views/panels/panel_lg.html
+++ b/MovieDB/templates/views/panels/panel_lg.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-{% extends 'base_view.html' %}
+{% extends 'views/base_view.html' %}
 
 {% block main_block %}
     <div class="container">
@@ -11,7 +11,7 @@
         </div>
 
         <div class="row">
-            <div class="col-lg-8 col-md-offset-2">
+            <div class="col-lg-12">
                 <div class="panel panel-dark text-left">
                     <div class="panel-heading">
                         {% block form_heading %}{% endblock %}
