Add actor/director forms working. Persiting new actors and directors in actions.

--- a/MovieDB/templates/forms/actor_form.html
+++ b/MovieDB/templates/forms/actor_form.html
@@ -30,7 +30,9 @@
     <div class="row">
         <div class="col-xs-4 col-xs-offset-4">
             <div class="form-group">
-                <button class="btn btn-block btn-success btn-ghost btn-lg">Submit</button>
+                <button type="submit" class="btn btn-block btn-success btn-ghost btn-lg" name="submit" value="actor">
+                    Submit
+                </button>
             </div>
         </div>
     </div>
