--- a/MovieDB/templates/forms/director_form.html
+++ b/MovieDB/templates/forms/director_form.html
@@ -25,7 +25,9 @@
     <div class="row">
         <div class="col-xs-4 col-xs-offset-4">
             <div class="form-group">
-                <button class="btn btn-block btn-success btn-ghost btn-lg">Submit</button>
+                <button type="submit" class="btn btn-block btn-success btn-ghost btn-lg" name="submit" value="director">
+                    Submit
+                </button>
             </div>
         </div>
     </div>
