Made forms more awesome. (Added generic form template. Form field popover and highlighting on field errors. Using horizontal form.)

--- a/MovieDB/static/css/style_main.css
+++ b/MovieDB/static/css/style_main.css
@@ -54,3 +54,11 @@ html, body {
 a.errorlist:hover{
     color:#843534
 }
+
+.warning-icon {
+    color: goldenrod;
+}
+
+.warning-icon:hover {
+    color: gold;
+}
