--- a/MovieDB/templates/forms/actor_form.html
+++ b/MovieDB/templates/forms/actor_form.html
@@ -1,59 +1,5 @@
 <form class="form-horizontal text-left" id="id_add_actor_form" name="add_movie_form" role="form" method="post">
     {% csrf_token %}
     {{ actor_form.media }}
-    {% if actor_form.errors %}
-        {% include 'controls/form_error_alert.html' with form=actor_form %}
-    {% endif %}
-    <div class="form-group has-error has-feedback">
-        <label class="control-label col-sm-2" for="id_first">{{ actor_form.first.label }}</label>
-        <div class="col-sm-8">{{ actor_form.first }}<span class="glyphicon glyphicon-warning-sign form-control-feedback" aria-hidden="true"></span></div>
-        <div class="col-sm-2">
-            {% for error in actor_form.first.errors %}
-                <em class="text-danger">* {{ error }}</em>
-            {% endfor %}
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="control-label col-sm-2" for="id_first">{{ actor_form.last.label }}</label>
-        <div class="col-sm-8">{{ actor_form.last }}</div>
-        <div class="col-sm-2">
-            {% for error in actor_form.last.errors %}
-                <em class="text-danger">* {{ error }}</em>
-            {% endfor %}
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="control-label id_dob" class="control-label col-sm-2">{{ actor_form.sex.label }}</label>
-        <div class="col-sm-8">{{ actor_form.sex }}</div>
-        <div class="col-sm-2">
-            {% for error in actor_form.sex.errors %}
-                <em class="text-danger">* {{ error }}</em>
-            {% endfor %}
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="id_dob" class="control-label col-sm-2">{{ actor_form.dob.label }}</label>
-        <div class="col-sm-8">{{ actor_form.dob }}</div>
-        <div class="col-sm-2">
-            {% for error in actor_form.dob.errors %}
-                <em class="text-danger">* {{ error }}</em>
-            {% endfor %}
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="id_dod" class="control-label col-sm-2">{{ actor_form.dob.label }}</label>
-        <div class="col-sm-8">{{ actor_form.dod }}</div>
-        <div class="col-sm-2">
-            {% for error in actor_form.dod.errors %}
-                <em class="text-danger">* {{ error }}</em>
-            {% endfor %}
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-xs-4 col-xs-offset-4">
-        <button type="submit" class="btn btn-block btn-success btn-ghost btn-lg" name="submit" value="actor">
-            Submit
-        </button>
-        </div>
-    </div>
+    {% include 'forms/generic_form_horizontal.html' with form=actor_form submit='actor' %}
 </form>
