--- a/MovieDB/templates/forms/movie_form.html
+++ b/MovieDB/templates/forms/movie_form.html
@@ -1,28 +1,19 @@
-<form class="text-left" id="id_add_movie_form" name="add_movie_form" role="form" method="post">
+<form class="form-horizontal" id="id_add_movie_form" name="add_movie_form" role="form" method="post">
     {% csrf_token %}
-    <div class="row">
-        <div class="col-md-12">
-            <div class="form-group">
-                {{ movie_form.title.errors }}
-                {{ movie_form.title }}
-            </div>
-            <div class="form-group">
-                {{ movie_form.company.errors }}
-                {{ movie_form.company }}
-            </div>
-            <div class="form-group">
-                {{ movie_form.year.errors }}
-                <label for="id_year">Year</label>
-                {{ movie_form.year }}
-            </div>
-            <div class="form-group">
-                {{ movie_form.rating.errors }}
-                <label for="id_rating">MPAA Rating</label>
-                {{ movie_form.rating }}
-            </div>
-            {{ genre_form.genre.errors }}
-            <label for="id_genre_checkboxes">Genres <em>(select all that apply)</em></label>
-            <div class="panel panel-default">
+    {{ movie_form.media }}
+    {# error alert #}
+    {% if movie_form.errors or genre_form.errors %}
+        {% include 'controls/form_alert_error.html' with form=form %}
+    {% endif %}
+    {# movie form fields #}
+    {% include 'controls/form_field_repeater_horizontal.html' with form=movie_form %}
+    {# genre form #}
+    <div class="form-group {% if genre_form.genres.errors %}has-error has-feedback{% endif %}">
+        <div class="col-sm-2 control-label">
+            <label for="{{ genre_form.genres.id_for_label }}">{{ genre_form.genres.label }}</label>
+        </div>
+        <div class="col-sm-9">
+            <div class="panel {% if genre_form.genres.errors %}has-error{% else %}panel-default{% endif %}">
                 <div class="panel-body">
                     <table id="id_genre_checkboxes" class="table table-condensed no-border">
                         {% for genre in genre_form.genres %}
@@ -39,12 +30,21 @@
                 </div>
             </div>
         </div>
+        {% if genre_form.genres.errors %}
+            <a class="btn btn-link warning-icon"
+               data-toggle="tooltip"
+               data-placement="top"
+               title="{% for error in genre_form.genres.errors %}{{ error }}{% endfor %}">
+                <span class="glyphicon glyphicon-warning-sign " aria-hidden="true"></span>
+            </a>
+        {% endif %}
     </div>
-    <div class="row">
+    {# form submit #}
+    <div class="form-group">
         <div class="col-xs-4 col-xs-offset-4">
-            <div class="form-group">
-                <button class="btn btn-block btn-success btn-ghost btn-lg">Submit</button>
-            </div>
+            <button type="submit" class="btn btn-block btn-success btn-ghost btn-lg" name="submit" value="movie">
+                Submit
+            </button>
         </div>
     </div>
 </form>
