Minor changes. WIP

--- a/MovieDB/templates/forms/movie_form.html
+++ b/MovieDB/templates/forms/movie_form.html
@@ -23,7 +23,7 @@
                                 </tr>
                                 <tr>
                             {% endif %}
-                            <td>{{ genre }}</td>
+                            <td><div class="checkbox">{{ genre }}</div></td>
                         {% endfor %}
                         </tr>
                     </table>
