Added collapse region for dod actor/director form fields.

--- a/MovieDB/templates/controls/form_field_repeater_horizontal.html
+++ b/MovieDB/templates/controls/form_field_repeater_horizontal.html
@@ -1,17 +1,4 @@
 {# Form fields #}
 {% for field in form %}
-    <div class="form-group {% if field.errors %}has-error has-feedback{% endif %}">
-        <label class="col-sm-2 control-label" for="{{ field.id_for_label }}">{{ field.label }}</label>
-        <div class="col-sm-9">
-            {{ field }}
-        </div>
-        {% if field.errors %}
-            <a class="btn btn-link warning-icon"
-               data-toggle="tooltip"
-               data-placement="top"
-               title="{% for error in field.errors %}{{ error }}{% endfor %}">
-                <span class="glyphicon glyphicon-warning-sign " aria-hidden="true"></span>
-            </a>
-        {% endif %}
-    </div>
+    {% include 'controls/form_field_horizontal.html' with field=field %}
 {% endfor %}
