Created Review form and templates for form and view. Need to implement AddReviewViewActions.

--- a/MovieDB/templates/forms/movie_actor_form.html
+++ b/MovieDB/templates/forms/movie_actor_form.html
@@ -10,11 +10,5 @@
     {% include 'controls/form_field_horizontal.html' with field=movieactor_form.aid %}
     {% include 'controls/form_field_horizontal.html' with field=movieactor_form.role %}
     {# form submit #}
-    <div class="form-group">
-        <div class="col-xs-4 col-xs-offset-4">
-            <button type="submit" class="btn btn-block btn-success btn-ghost btn-lg" name="submit" value="movieactor">
-                Submit
-            </button>
-        </div>
-    </div>
+    {% include 'controls/submit_button_horizontal.html' with submit_name='movieactor' %}
 </form>
