--- a/MovieDB/templates/views/add_review_view.html
+++ b/MovieDB/templates/views/add_review_view.html
@@ -1,9 +1,9 @@
 {% extends 'views/panels/panel_md.html' %}
 
 {% block form_heading %}
-    <h2>Add A Movie</h2>
+    <h2>Add A Movie Review</h2>
 {% endblock %}
 
 {% block form_content %}
-    {% include 'forms/movie_form.html' %}
+    {% include 'forms/review_form.html' %}
 {% endblock %}
