--- a/MovieDB/templates/forms/director_form.html
+++ b/MovieDB/templates/forms/director_form.html
@@ -24,11 +24,5 @@
     {% include 'controls/form_field_horizontal.html' with field=director_form.dod %}
     </div>
     {# form submit #}
-    <div class="form-group">
-        <div class="col-xs-4 col-xs-offset-4">
-            <button type="submit" class="btn btn-block btn-success btn-ghost btn-lg" name="submit" value="director">
-                Submit
-            </button>
-        </div>
-    </div>
+    {% include 'controls/submit_button_horizontal.html' with submit_name='director' %}
 </form>
