--- a/MovieDB/templates/forms/movie_director_form.html
+++ b/MovieDB/templates/forms/movie_director_form.html
@@ -9,11 +9,5 @@
     {% include 'controls/form_field_horizontal.html' with field=moviedirector_form.mid %}
     {% include 'controls/form_field_horizontal.html' with field=moviedirector_form.did %}
     {# form submit #}
-    <div class="form-group">
-        <div class="col-xs-4 col-xs-offset-4">
-            <button type="submit" class="btn btn-block btn-success btn-ghost btn-lg" name="submit" value="moviedirector">
-                Submit
-            </button>
-        </div>
-    </div>
+    {% include 'controls/submit_button_horizontal.html' with submit_name='moviedirector' %}
 </form>
