--- a/MovieDB/templates/views/index.html
+++ b/MovieDB/templates/views/index.html
@@ -14,14 +14,14 @@
             <button type="button" class="close" data-dismiss="alert"
                     aria-label="Close"><span aria-hidden="true">&times;</span>
             </button>
-            <strong>What Works?</strong> Navigation, Search, Browse pages, Details pages, Add movie/actor/director forms
+            <strong>What Works?</strong> Navigation, Search, Browse pages, Details pages, 'Add' forms, 'Write a Review' form
         </div>
 
         <div class="alert alert-danger alert-dismissable fade in" role="alert">
             <button type="button" class="close" data-dismiss="alert"
                     aria-label="Close"><span aria-hidden="true">&times;</span>
             </button>
-            <strong>What Doesn't Work Yet?</strong> Everything else...
+            <strong>What Doesn't Work Yet?</strong> Browse Reviews page
         </div>
 
         <h2>Filler Text</h2>
