Corrected xml seed data to correctly write utf-8 chars to file.

--- a/MovieDB/templates/views/detail_movie_view.html
+++ b/MovieDB/templates/views/detail_movie_view.html
@@ -47,7 +47,7 @@
                                 <input
                                     type="number"
                                     class="rating form-control hide"
-                                    data-size="sm" data-show-clear="false"
+                                    data-size="xs" data-show-clear="false"
                                     data-readonly="true"
                                     value="{{ avg_user_rating }}">
                             </td>
